[package]
name = "sc_hla_count"
version = "0.1.0"
authors = ["Charlotte Darby <cdarby@jhu.edu>", "Ian Fiddes <ian.t.fiddes@gmail.com>", "Patrick Marks <patrick@10xgenomics.com>"]

[dependencies]
bio = "0.25"
clap = "*"
csv = "1"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn", rev = "9c7caf1903b15758c8e9c7fa546b6f3fcf438fdc" }
debruijn_mapping = { git = "https://github.com/Irrationone/rust-pseudoaligner.git", rev = "af4854b53b974240b17997dad3a8d123f353689d" }
failure = "*"
human-panic = "1.0.1"
itertools = "0.8"
log = "*"
regex = "1"

# todo: switch back to crates.io version after next release of rust-htslib
rust-htslib = { git = "https://github.com/Irrationone/rust-htslib.git" }

serde = "1.0"
simplelog = "0.5.0"
sprs = "*"
tempfile = "*"
terminal_size = "*"

[dependencies.smallvec]
features = ["serde"]
version = "0.6.8"

[profile.release]
debug = true
